# bash

./: Cargo.toml
src/: camera.rs  main.rs  player.rs
src/player/: components.rs  mod.rs  systems.rs
