[package]
name = "bash"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.13.0"}
bevy-inspector-egui = "0.23.2"
bevy_rapier3d = "0.25.0"
leafwing-input-manager = "0.13.3"

# Enable a eeea small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
